lab1/Test/L1-A-12-11.cmm
int CPexQ 
;
int od ( ) {
  if ( c6n5_t20cJIQr7k )   uojn ;
else   if ( voy ) {
    Iomo ;
&    if ( v_u2UK_4VBlKGGKJfJ ) {
      CC_jn8hp_0MgZ5BJj ;
      if ( Qkw90U2DWbq44SEB9z )       if ( f0fn ) 
        {
        struct {
          int tiGKy_1VuicLE879RJz ;
          struct {
          }RvVbBl6V13Xr57 ;
        }ETBQlzm7q ;
        if ( gz )         while ( s2zZ6d4tMA3n )         Cm 
          ;

else {
          struct mmsd9jlm0YB JyaHQqqO ;
        }
        while ( zwtM1lgQ0WosdQm_ )         while ( 
          KEOf )         while ( XXIxv )         RMxG8tJACNep 
          ;



        pBFrGlg ;
      }else       if ( _ZnaAgt )       yMpWHgW_anVMa 
        ;
else       M1v_A7YudQ0gpuCv ;



    }
    if ( aeq )     Z ;
else     Byoi6caC2A ;

    if ( Kc )     while ( qJ6Wu9DHHJJqjckR9 )     return 
      ZD8tji2_pYFjr ;

else     OmH_ ;

  }

}
struct C3iK7WaASKXcaw1Li4qh {
  float HvBJ1NZeP9KKEEWZD , YPWJ9cn2rTdXCh_ [ 1727045209 
    ] = zhrFPT0xv = ggXUhDN || wDBvmZ && Rshu1mnIyIy8z 
    < EifbthjLRZ94DRELyM9h / ! Vh ( Ff7ukxWpcHPQX , y5NQ9KDro4bucGmfWZc 
    >= IX8DlrFFu2g6rh - - ( acHDZGbOZebsC1Gf && BySJ83S7ETp85 
    + RxHHMDWCbup * ! - ! - k_A1VyWdB [ VJm7_c4qKS1KpOTvi6Ph 
    || xY && lRem4tQYR213ZTpoKDM > XynbU_JqVXYv_Y9O - 
    I3mjhDWyaxZV [ LpOZ = tT08m4FTvN != yS0ImYwsCdSM + 
    ! kDbd_MDNxGNNmU20T [ QptU || v <= bhnFxjCxwwT + ] 
    == 956109520 - - rwMZXb1QuhuMEJzVnebI ] . Ev9kvD5Kwm_vjXJ23 
    . jWR * _aEZU5O3u2T2oHHMv ( ) ] ) ) ;
};
int VtMofEZ9 , DJfrIvQI5Kbk3t 


int ;
int WsoAgGoxKMOFlnw ( int Z2ywvMdo11Wrb , int wOyR6dYlwPOF4 
  ) {
}
